Fixat så att buy-items wrappar snyggt

--- a/css/style-sheet.css
+++ b/css/style-sheet.css
@@ -16,7 +16,7 @@ a:visited {
   color: black;
 }
 
-@media screen and (max-width:550px){
+@media screen and (max-width:750px){
 
 
 h3{
@@ -194,7 +194,8 @@ footer{
 
 }
 
-@media screen and (min-width:551px){
+
+@media screen and (min-width:750px){
 
 h3{
     font-family: Arial, Helvetica, sans-serif;
@@ -289,7 +290,7 @@ nav{
 div#layout-buy{
     display: grid;
     height: auto;
-    grid-template-rows: 10em 5em auto 20em;
+    grid-template-rows: 10em 5em 75em 10em;
     grid-template-areas:
     'hd'
     'nv'
@@ -331,11 +332,11 @@ main#buy-main{
     grid-area: A-mn;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    justify-content: center;
     background-color: whitesmoke;
-    padding: 5em;
-    gap: 2.5em;
+    padding: 5em 1em;
+    gap: 5em;
 }
 
 main#buy-main article{
